--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^9.0.2",
     "astro": "^5.16.6",
+    "resend": "^6.6.0",
     "tailwindcss": "^3.0"
   }
 }
